[package]
name = "multi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = { version = "4.3.1", features = ["openssl"] }
actix-web-actors = "4.2.0"
actix-files = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
rand = "0.8.5"
openssl = "0.10.48"

[[bin]]
name = "multi"
path = "src/main.rs"

[[bin]]
name = "multi_https"
path = "src/main_https.rs"

[features]
default = []
https = []
